Update EntryPoint.java